# sira

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCUMENTATION.md  Dockerfile.backend  INSTRUCTIONS_original.md  PLAN.md  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
frontend/: Dockerfile  app.py
ingestion/: csv_ingestor.py  pdf_ingestor.py  xlsx_ingestor.py
models/: schemas.py
notebooks/: 01_stocks_exploration.ipynb  02_document_registry.ipynb  03_cross_reference.ipynb
orchestration/: query_router.py
prompts/: query_classification.yaml  response_synthesis.yaml  sql_generation.yaml
retrieval/: sql_retriever.py  vector_retriever.py
synthesis/: response_builder.py
tests/: test_api.py  test_ingestion.py  test_retrieval.py
utils/: chunker.py  db.py  embedder.py  prompt_loader.py
